--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "cross-fetch": "^2.2.1",
     "graphql": "^0.13.2",
     "graphql-tag": "^2.9.2",
+    "prop-types": "^15.6.1",
     "react": "^16.4.0",
     "react-apollo": "^2.1.4",
     "react-dom": "^16.4.0",
